# disrustor

./: Cargo.toml  LICENSE  README.md  azure-pipelines.yml  rust-toolchain
.github/: codecov.yml  dependabot.yml
.github/workflows/: build.yaml  ci.yaml  lint.yaml  release.yaml
benches/: my_benchmark.rs  u64_channels.rs
examples/: cve_2020_36470_example1.rs  cve_2020_36470_example2.rs  multi_producer.rs  single_producer.rs
examples_old/: multi_producer.rs  single_producer.rs
src/: barrier.rs  builder.rs  consumer.rs  dsl.rs  executor.rs  lib.rs  prelude.rs  producer.rs  ringbuffer.rs  sequence.rs  sequencer.rs  strategy.rs  utils.rs  wait.rs
src_old/: consumer.rs  dsl.rs  executor.rs  prelude.rs  producer.rs  ringbuffer.rs  utils.rs  wait.rs
tests/: safety.rs
tests/cve/: cve_2020_36470_1.rs  cve_2020_36470_1.stderr  cve_2020_36470_2.rs  cve_2020_36470_2.stderr
