[package]
name = "disrustor"
version = "0.2.0"
edition = "2018"
authors = ["Sebastian Klose <mail@sklose.com>"]
description = "This project is a port of the LMAX Disruptor to Rust"
keywords = ["disruptor", "lmax"]
categories = ["concurrency", "data-structures"]
repository = "https://github.com/sklose/disrustor"
license = "MIT"

[badges]
azure-devops = { project = "sklosegithub/disrustor", pipeline = "sklose.disrustor" }

[dependencies]
log = "0.4.8"

[dev-dependencies]
criterion = "0.3.0"
fern = "0.5.8"
chrono = "0.4.9"

[[bench]]
name = "my_benchmark"
harness = false
