[package]
name = "disrustor"
version = "0.4.0"
edition = "2018"
authors = ["Sebastian Klose <mail@sklose.com>"]
description = "This project is a port of the LMAX Disruptor to Rust"
keywords = ["disruptor", "lmax"]
categories = ["concurrency", "data-structures"]
repository = "https://github.com/sklose/disrustor"
license = "MIT"
rust-version = "1.59"

[dependencies]
log = "0.4"

[dev-dependencies]
criterion = "0.5"
fern = "0.6"
chrono = "0.4"
trybuild = "1"

[[bench]]
name = "u64_channels"
harness = false
